--- a/readme
+++ b/readme
@@ -1,3 +1,3 @@
 Simple GTFS  playground.
 
-Truing to parse and create some trips automaticaly.
+Trying to parse and create some trips automaticaly.
